# multi_firm_operations

./: .gitignore  CHANGELOG.md  CLAUDE.md  FXIFY_rules.txt  Makefile  Market Ecology, the Storage Effect, and Evolutionary Dynamics.md  README.md  REPO_MAP.md  STATE.md  accounts.py  cli.py  csv_parser.py  dd_protection.py  firm_rules.py  fxify_rule_validator.py  mc_explore.py  mc_silver_5strat_impact.py  mc_silver_regime_gate.py  portfolio_mc.py  prop_firm_pipeline_spec.md  pyproject.toml  tv_mt5_pnl_reconciliation.py
.claude/: settings.json
analysis/: 1r_diagnosis.py  bar_data_high_leverage.md  correlated_day_check.py  dd_protection_trace.py  q11_striker_funnel_decomp.csv  q11_striker_funnel_decomp.json  q12_guardian_hour_decomp.json  q14_trades_with_adverse_flag.csv  q15_aegis_vol_coupling.json  q3_pairwise_joint_tail.py  q5_break_window.py  regime_by_year.csv  silver_v15_oanda_alpha_survey.py  striker_pyramid_decomposition.py  time_to_pass.py
config/: params.toml
data/: USOIL_oanda_m15_2022-01-04_to_2026-04-20_clean.sha256  USOIL_oanda_m15_2022-01-04_to_2026-04-20_raw.sha256  audnzd_oanda_m15_2022-01-01_to_2026-04-26_clean.sha256  audnzd_oanda_m15_2022-01-01_to_2026-04-26_raw.sha256
docs/: operational_rules.md  rejected_candidates.md  rule_0.md
fxify_analysis/: 01_challenge_equity_optimization.py  02_losing_trade_patterns.py  03_cross_strategy_drawdown.py  04_exit_optimization.py  05_session_time_filters.py  README.md  bust_profiler.py  config.py  master_analysis.py  monte_carlo_sim.py
lib/: correlation.py  mvd.py  nonlinear.py  oanda.py  oanda_creds.py  regime_bootstrap.py  (+1 more)
weekly_review_feeder/: .env.example  README.md  WIRING_NOTES.md  pyproject.toml
weekly_review_feeder/tests/: test_mc_wrapper.py  test_w19.py
weekly_review_feeder/tests/fixtures/: README.md  guardian_gold_v5_5.csv  striker_nas100_v1.csv  w19_dxtrade_fills.csv  w19_expected.json
weekly_review_feeder/weekly_review_feeder/: __init__.py  __main__.py  backtest_parser.py  compute.py  config.py  dd_wrapper.py  fills_parser.py  mc_wrapper.py  notion_writer.py  provenance.py  ptl_client.py
(+512 files in other folders)
